--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root{
+  --primary-white: #fff;
+  --primary-blue: #5A7FC0;
+  --primary-dark: rgba(255,255,255,0)
+}
+
+body{
+  font-family: "Roboto Condensed" sans-serif;
+}
+
 .logo{
   width: 16.25rem;
 }
+nav a.nav-link {
+  font-size: .8rem;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a{
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white)!important;
+  border-top: 0.1875rem solid var(--primary-dark);
+}
+
+.navbar-brand{
+  max-width: 17.25rem;
+  padding: 0 !important;
+  height: 8rem !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a:focus{
+  border-top: 0.1875rem solid var(--primary-blue)!important;
+}
+
+.navbar-nav > li > a.hover {
+  border-top: 0.1875rem solid var(--primary-blue)!important;
+}
+
 
 .App {
   text-align: center;
