--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 :root{
   --primary-white: #fff;
   --primary-blue: #5A7FC0;
-  --primary-dark: rgba(255,255,255,0)
+  --primary-dark: rgba(255,255,255,0);
+  --primary-hover-red: #f33501;
 }
 
 body{
   font-family: "Roboto Condensed" sans-serif;
 }
-
+/* Navbar */
 .logo{
   width: 16.25rem;
 }
@@ -43,6 +44,71 @@ nav ul li {
 .navbar-nav > li > a.hover {
   border-top: 0.1875rem solid var(--primary-blue)!important;
 }
+
+/* header */
+
+.header-wrapper {
+  position: relative;
+  background:url(./components/electric.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+} 
+
+.main-info{
+  display: flex;
+  position: absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto Condensed" sans-serif;
+}
+
+.main-info h1{
+  color: var(--primary-white);
+  text-transform: uppercase;
+}
+
+@media(max-width: 768px){
+  .navbar-brand{
+    width: 7rem;
+  }
+
+  .main-info h1 {
+    font-size: 1.7rem !important;
+  }
+  .typed-text{
+    font-size: 1.3rem !important;
+  }
+}
+
+/* Typed text */
+
+.typed-text{
+  font-size:2rem;
+  color: var(--primary-white);
+}
+
+/* Header Main Offer Button */
+.btn-main-offer{
+  border: 1px solid var(--primary-hover-red);
+  text-transform: uppercase;
+  border-radius:0;
+  padding: 0.625rem 0.75rem 0.75rem 0.75rem;
+  color: var(--primary-white);
+  margin: 2rem;
+}
+
+/* .tsparticles-canvas-el{
+  position:absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 1;
+} */
 
 
 .App {
