--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body{
-  font-family: "Roboto Condensed" sans-serif;
+  font-family: "Roboto Condensed", sans-serif!important;
 }
 /* Navbar */
 .logo{
@@ -49,7 +49,7 @@ nav ul li {
 
 .header-wrapper {
   position: relative;
-  background:url(./components/electric.jpg) no-repeat;
+  background:url(./electric.jpg) no-repeat;
   background-size: cover;
   background-position: center;
   height: 90vh;
@@ -103,13 +103,29 @@ nav ul li {
   margin: 2rem;
 }
 
-/* .tsparticles-canvas-el{
-  position:absolute;
-  height: 100vh;
-  width: 100vw;
-  z-index: 1;
-} */
+/* About me  */
+.photo-wrap{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.profile-img {
+  /* padding: .3rem; */
+  border: 3px solid #152544
+}
 
+.about-heading {
+  color: var(--primary-blue);
+  text-transform: uppercase;
+  justify-content: center;
+  text-align: center;
+}
+
+@media(max-width: 468px){
+  .profile-img{
+    width: 10rem;
+  }
+}
 
 .App {
   text-align: center;
