completed formatting portfolio section

--- a/src/App.css
+++ b/src/App.css
@@ -129,29 +129,44 @@ nav ul li {
 
 /* Portfolio */
 
-.portfolio-wrapper{
-  background: #152544;
-  padding: 3rem 0;
+.portfolio-wrapper {
+  background: #276494;
+  padding: .5rem 0;
 }
 
 .portfolio-img{
   width: 15rem;
-  border: 1px solid var(--primary-blue);
-  padding: 0 0.5rem;
+  /* border: 1px solid var(--primary-blue); */
+  /* padding: 0 0.5rem; */
 }
 
-.portfolio-image-box{
+.portfolio-image-box {
   position: relative;
+  margin: 1rem;
   background: var(--primary-dark);
   width: 16rem;
   height: 11rem;
   top:0;
-  border: 1px solid var(--primary-blue)
+  /* border: 1px solid var(--primary-blue); */
+  padding: 0 0.5rem;
 }
 
 
+/* overflow */
+.overflow {
+  position:absolute;
+  opacity: 0;
+  background: black;
+  width: 15rem;
+  height: 11rem;
+  top: 0;
+  border:2px solid white;
+  cursor:pointer;
+}
 
-
+.portfolio-image-box:hover .overflow{
+  opacity:60%;
+}
 
 .App {
   text-align: center;
